removes horizontal scrollbar on desktop

--- a/explorer/client/src/components/ownedobjects/styles/OwnedCoin.module.css
+++ b/explorer/client/src/components/ownedobjects/styles/OwnedCoin.module.css
@@ -62,7 +62,7 @@
 }
 
 .value {
-    @apply w-[50vw] text-sui-grey-80;
+    @apply max-w-[50vw] text-sui-grey-80;
 }
 
 .closedgroup .summary:hover {
